<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NMedia</string>
    <string name="nmedia">Nmedia</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_likes" translatable="false">Like</string>
    <string name="description_shares" translatable="false">Share</string>
    <string name="description_post_save" translatable="false">Save</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="post_text" translatable="false">Post Text</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="description_post_like" translatable="false">Like</string>
    <string name="description_post_share" translatable="false">Share</string>
    <string name="error_empty_content" translatable="false">Content can\'t be empty</string>
    <string name="edited" translatable="false">Edit Message</string>
    <string name="description_cancel_edit" translatable="false">Canceling an edit</string>
    <string name="description_save_post" translatable="false">Save post</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="edit_message" translatable="false">Edit Message</string>
    <string name="pencil" translatable="false">Pencil</string>
    <string name="edit_cancel" translatable="false">Cancel</string>
    <string name="viewsCount" translatable="false">"Views: "</string>
    <string name="playVideo" translatable="false">Play Button</string>
    <string name="imageVideo" translatable="false">Video Image</string>

</resources>